# advent-of-code-2021

./: .gitignore  Cargo.toml  README.md
01_sonar_sweep/: Cargo.toml  README.md
01_sonar_sweep/src/: main.rs
02_dive/: Cargo.toml  README.md
02_dive/src/: lib.rs  main.rs
03_binary_diagnostic/: Cargo.toml  README.md
03_binary_diagnostic/src/: lib.rs  main.rs
04_giant_squid/: Cargo.toml  README.md
04_giant_squid/src/: lib.rs  main.rs
05_hydrothermal_venture/: Cargo.toml  README.md
05_hydrothermal_venture/src/: lib.rs  main.rs
06_lanternfish/: Cargo.toml  README.md
06_lanternfish/src/: lib.rs  main.rs
07_the_treachery_of_whales/: Cargo.toml  README.md
07_the_treachery_of_whales/src/: lib.rs  main.rs
08_seven_segment_search/: Cargo.toml  README.md
08_seven_segment_search/src/: lib.rs  main.rs
09_smoke_basin/: Cargo.toml  README.md
09_smoke_basin/input/: input.txt
10_syntax_scoring/: Cargo.toml  README.md
11_dumbo_octopus/: Cargo.toml  README.md
12_passage_pathing/: Cargo.toml  README.md
13_transparent_origami/: Cargo.toml  README.md
14_extended_polymerization/: Cargo.toml  README.md
15_chiton/: Cargo.toml  README.md
16_packet_decoder/: Cargo.toml  README.md
17_trick_shot/: Cargo.toml  README.md
18_snailfish/: Cargo.toml  README.md
19_beacon_scanner/: Cargo.toml  README.md
20_trench_map/: Cargo.toml  README.md
21_dirac_dice/: Cargo.toml  README.md
22_reactor_reboot/: Cargo.toml  README.md
23_amphipod/: Cargo.toml  README.md
24_arithmetic_logic_unit/: Cargo.toml  README.md
25_sea_cucumber/: Cargo.toml  README.md
(+46 files in other folders)
