[workspace]
members = [
    "common",
    "01_sonar_sweep",
    "02_dive",
    "03_binary_diagnostic",
    "04_giant_squid",
    "05_hydrothermal_venture",
    "06_lanternfish",
    "07_the_treachery_of_whales",
    "08_seven_segment_search",
    "09_smoke_basin",
    "10_syntax_scoring",
    "11_dumbo_octopus",
    "12_passage_pathing",
    "13_transparent_origami",
    "14_extended_polymerization",
    "15_chiton",
    "16_packet_decoder",
    "17_trick_shot"
]

exclude = [
    "template"
]